# svcheck

./: Cargo.toml  Makefile  REDAME.txt  Readme.md  example.env
.github/workflows/: build-macos.yml
install/MacosLinux/: install.sh
src/: ia_integration.rs  main.rs
src/ia/: ia_open_router.rs  mod.rs
src/utilities/: config.rs  ia_integration.rs  mod.rs  response_model.rs  validator.rs
win/: README-POST-INSTALL.txt  README.txt  config.toml  svcheck_installer.iss
