[package]
name = "svcheck"
version = "0.2.0"
edition = "2024"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
serde_json = "1.0.140"
url = "2.4"
regex = "1.10"

[[bin]]
name = "svcheck"
path = "src/main.rs"
